# tfc.github.io

./: .gitignore  .gitmodules  CNAME  _config.yml  about.hamlet  about.html  about.md  atom.xml  blog.cabal  cspell.json  datenschutz.html  datenschutz.md  default.nix  deploy.sh  derivation.nix  feed.xml  flake.nix  hamlet.hs  hlog.cabal  impressum.html  impressum.md  index.html  index2.html  index3.html  index4.html  release.nix  result  shell.nix  site.hs  sitemap.xml  tailwind.sh  watch.sh
_drafts/: auto_std_initializer.md  brainfuck_interpreter.md  crtp.md  how_do_sfinae_traits_work.md  if_compiles_type_traits.md  lambda_return_copy_reference.md  numeric_range.md  on_exit.md  performance.md  pprintpp.md  reinterpret_cast_trap.md  sdl_helpers.md  sequence.md  static_polymorphy.md  tmp_basics.md  tmp_io.md  type_lists.md  what_is_a_type_trait.md
_includes/: analytics.html  comments.html  head.html  sidebar.html
_layouts/: default.html
_plugins/: mathjax.rb
_posts/: 2016-02-18-what_is_a_type_trait.md  2016-02-19-how_do_sfinae_traits_work.md  2016-02-20-short_file_macro.md  2016-02-21-automatic_resource_release_with_sdl.md  2016-02-21-if_compiles_type_traits.md  2016-02-21-on_exit_macro.md  2016-02-26-how_to_use_crtp_to_reduce_duplication.md  2016-02-27-static_polymorphy.md  2016-03-18-uncaught_exceptions_in_cpp.md  2016-03-23-const_reference_to_temporary_object.md  2016-05-05-template_meta_programming_basics.md  2016-05-08-compile_time_type_lists.md  2016-05-14-converting_between_c_strings_and_type_lists.md  2016-05-15-turing_tape_with_type_lists.md  (+9 more)
(+114 files in other folders)
